Fix mobile menu off center

--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -269,6 +269,10 @@
             min-width: 0;
             width: 100%;
           }
+          
+          button {
+            min-width: 10rem;
+          }
         }
       }
 
